--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.2",
     "@astrojs/starlight": "^0.10.0",
+    "@astrojs/ts-plugin": "^1.1.3",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.8",
     "astro": "^3.0.6",
-    "sharp": "^0.32.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.32.5",
+    "wagmi": "^1.4.3"
   }
 }
