--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@astrojs/react": "^3.0.2",
     "@astrojs/starlight": "^0.10.0",
     "@astrojs/ts-plugin": "^1.1.3",
+    "@rainbow-me/rainbowkit": "^1.1.1",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "astro": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.5",
+    "viem": "^1.15.4",
     "wagmi": "^1.4.3"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
