--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.0.2",
-    "@astrojs/starlight": "^0.10.0",
+    "@astrojs/starlight": "^0.9.1",
     "@astrojs/ts-plugin": "^1.1.3",
     "@rainbow-me/rainbowkit": "^1.1.1",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "astro": "^3.0.6",
+    "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.5",
