--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.10.0",
+    "@astrojs/react": "^3.0.4",
+    "@astrojs/starlight": "^0.11.2",
     "astro": "^3.0.6",
     "sharp": "^0.32.5"
   }
