--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@astrojs/starlight": "^0.11.2",
     "astro": "^3.0.6",
     "sharp": "^0.32.5"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
