--- a/package.json
+++ b/package.json
@@ -47,8 +47,12 @@
   "dependencies": {
     "@astrojs/react": "^3.0.4",
     "@astrojs/starlight": "^0.11.2",
+    "@astrojs/ts-plugin": "^1.3.1",
+    "@rainbow-me/rainbowkit": "^1.3.0",
     "astro": "^3.0.6",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "viem": "^1.19.11",
+    "wagmi": "^1.4.10"
   },
   "devDependencies": {
     "cspell": "^8.0.0",
