--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@astrojs/ts-plugin": "^1.3.1",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "astro": "^3.0.6",
+    "ethers": "^6.9.0",
     "sharp": "^0.32.5",
     "viem": "^1.19.11",
     "wagmi": "^1.4.10"
