--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@rainbow-me/rainbowkit": "^1.3.0",
     "astro": "^3.0.6",
     "ethers": "^6.9.0",
+    "react-toastify": "^9.1.3",
     "sharp": "^0.32.5",
     "viem": "^1.19.11",
     "wagmi": "^1.4.10"
