--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@astrojs/ts-plugin": "^1.3.1",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "astro": "^3.0.6",
+    "astro-expressive-code": "^0.30.1",
     "ethers": "^6.9.0",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.5",
