--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
     "@astrojs/starlight": "^0.11.2",
     "@astrojs/ts-plugin": "^1.3.1",
     "@rainbow-me/rainbowkit": "^2.0.2",
+    "@skaleproject/pow-ethers": "^0.3.3",
     "@tanstack/react-query": "^5.28.8",
     "astro": "^3.0.6",
     "astro-expressive-code": "^0.30.1",
-    "ethers": "^6.9.0",
+    "ethers": "^6.11.1",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.5",
-    "viem": "^2.9.2",
     "wagmi": "^2.5.12"
   },
   "devDependencies": {
