--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "astro-expressive-code": "^0.30.1",
     "ethers": "^6.11.1",
     "react-toastify": "^9.1.3",
+    "rehype-mathjax": "^6.0.0",
+    "remark-math": "^6.0.0",
     "sharp": "^0.32.5",
     "wagmi": "^2.5.12"
   },
