Resolve Custom Paths for Overriden Components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "paths": {
+      "virtual:starlight/components/*": ["./node_modules/@astrojs/starlight/dist/components/*"],
+      "virtual:starlight/scheme/*": ["./node_modules/@astrojs/starlight/dist/schema/*"]
+    },
     "plugins": [
       {
         "name": "@astrojs/ts-plugin"
