Fix all broken links

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "linkcheck": "CHECK_LINKS=true astro build"
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
@@ -15,5 +16,8 @@
     "astro": "^5.10.1",
     "sharp": "^0.32.5",
     "viem": "^2.23.13"
+  },
+  "devDependencies": {
+    "starlight-links-validator": "^0.17.0"
   }
 }
