--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/starlight": "^0.34.4",
     "astro": "^5.10.1",
     "sharp": "^0.32.5",
+    "starlight-llms-txt": "^0.5.1",
     "viem": "^2.23.13"
   },
   "devDependencies": {
